Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5068

getstripedir shows wrong default stripe count

XMLWordPrintable

    • 3
    • 13994

      getdirstripe shows wrong default stripe count, although sub dir has the correct default stripe count
      [root@client-3 lustre]# lfs setdirstripe -D -c2 /mnt/lustre/test
      [root@client-3 lustre]# lfs getdirstripe -D /mnt/lustre/test
      (Default)/mnt/lustre/test
      lmv_stripe_count: 0
      lmv_stripe_offset: -1[root@client-3 lustre]#

            di.wang Di Wang (Inactive)
            sarah Sarah Liu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: