LU-5068 mdt: check default LMV EA when set reply EA size

MDT should also check default LMV EA size when setting reply EA
size, otherwise the following xattr get will not be able to hold
default LMV EA in its reply buffer.

Add test cases to verify default stripe count.

Minor cleanup for the output of default LMV EA.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I2f94d6e87ba05720e5e4aa694dce3246d6a27664
Reviewed-on: http://review.whamcloud.com/10338
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>